--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" sizes="192x192" href="%PUBLIC_URL%/logo.png">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Playfair+Display+SC" rel="stylesheet">
+
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no user-scalable=no"
     />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>ZTHEPRO</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
